# recmooc4all

./: .gitignore  README.md  delete_all_cache.py  download_vector_db.py  llm_judge.py  main.py  pyproject.toml  requirements.txt
app/: chatbot.py
app/chains/: chains.py
app/database/: agent_conn.py  chatbot.sql  database.py  recmooc_conn.py  recmoocusers.py  synchronisation.py
app/models/: agent_state.py  models.py
app/nodes/: nodes.py
app/prompts/: prompt.py
app/repositories/: conv_repo.py  query_repo.py  user_repo.py
app/routes/: routes.py
app/schema/: query_schema.py
app/scripts/: vectore_store.py
app/services/: conv_service.py  query_service.py  response_generation_service.py  user_service.py
app/utils/: decorator.py  redis_cache.py  stt_tts.py  utils.py
app/workflow/: workflow.py
